--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
-<h1 style="color: red;">Hello world!!</h1>
+<h1 style="color: red;">Hello África!!</h1>
 <h2 style="color: blue;">Hello again!</h2>
 <h3 style="color: purple">Hello there!</h3>
