--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <head>
 	<link href="style.css" rel="stylesheet" type="text/css" />
 </head>
-<h1 style="color: red;">Hello Africa!!</h1>
-<h2 style="color: blue;">Hello again!</h2>
+<h1>Hello Africa!!</h1>
+<h2>Hello again!</h2>
 <h3 style="color: purple">Hello there!</h3>
 <ul>
 	<li>With great power comes great responsibilty.</li>
