Added a quote by yogi

--- a/index.html
+++ b/index.html
@@ -6,5 +6,5 @@
 <h3 style="color: purple">Hello there!</h3>
 <ul>
 	<li>With great power comes great responsibilty.</li>
-	<li></li>
+	<li>You can obserbe a lot by watching.</li>
 </ul>
