--- a/index.html
+++ b/index.html
@@ -7,4 +7,5 @@
 <ul>
 	<li>With great power comes great responsibilty.</li>
 	<li>You can obserbe a lot by watching.</li>
+	<li>Talk is cheap, show me the code.</li>
 </ul>
