take off color of h3 in index

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 </head>
 <h1>Hello Africa!!</h1>
 <h2>Hello again!</h2>
-<h3 style="color: purple">Hello there!</h3>
+<h3>Hello there!</h3>
 <ul>
 	<li>With great power comes great responsibilty.</li>
 	<li>You can obserbe a lot by watching.</li>
