Added quotes of idea and life, mixed reset.

--- a/index.html
+++ b/index.html
@@ -13,4 +13,6 @@
 	<li>SQ1</li>
 	<li>SQ2</li>
 	<li>SQ3</li>
+	<li>nothing is more dangerous than an idea, when it's the only one we have.</li>
+	<li>Life is like a movie, write your own ending.</li>
 </ul>
