Changed first header

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <head>
 	<link href="style.css" rel="stylesheet" type="text/css" />
 </head>
-<h1>Hello Africa!!</h1>
+<h1>Yasser's quotes</h1>
 <h2>Hello again!</h2>
 <h3>Hello there!</h3>
 <ul>
