Changed second header

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 	<link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 <h1>Yasser's quotes</h1>
-<h2>Hello again!</h2>
+<h2>For reading pleasure.</h2>
 <h3>Hello there!</h3>
 <ul>
 	<li>Sabron jamil</li>
