--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
 	<li>SQ3</li>
 	<li>nothing is more dangerous than an idea, when it's the only one we have.</li>
 	<li>Life is like a movie, write your own ending.</li>
+	<li>We are who we are.</li>
 </ul>
 <p>End</p>
