Added quote of yogi barra

--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
 	<li>nothing is more dangerous than an idea, when it's the only one we have.</li>
 	<li>Life is like a movie, write your own ending.</li>
 	<li>We are who we are.</li>
+	<li>It ain't over till it's over.</li>
 </ul>
 <p>End</p>
