--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
 	<li>nothing is more dangerous than an idea, when it's the only one we have.</li>
 	<li>Life is like a movie, write your own ending.</li>
 	<li>We are who we are.</li>
+	<li>Love your enemies, for they tell you your faults.</li>
 </ul>
 <p>End</p>
